--- a/Recommendations_with_IBM.html
+++ b/Recommendations_with_IBM.html
@@ -15172,10 +15172,12 @@ Total user-article interactions: 45993
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[9]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[61]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">article_id</span><span class="o">.</span><span class="n">value_counts</span><span class="p">(</span><span class="n">dropna</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">article_id</span><span class="o">.</span><span class="n">value_counts</span><span class="p">(</span><span class="n">dropna</span><span class="o">=</span><span class="kc">False</span><span class="p">))</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">article_id</span><span class="o">.</span><span class="n">value_counts</span><span class="p">(</span><span class="n">dropna</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span><span class="o">.</span><span class="n">index</span><span class="o">.</span><span class="n">values</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">article_id</span><span class="o">.</span><span class="n">value_counts</span><span class="p">(</span><span class="n">dropna</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span><span class="o">.</span><span class="n">values</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
 </pre></div>
 
      </div>
@@ -15193,12 +15195,10 @@ Total user-article interactions: 45993
 <div class="jp-OutputArea-child">
 
     
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[9]:</div>
+    <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 
 
-
-
-<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
 <pre>1429.0    937
 1330.0    927
 1431.0    671
@@ -15210,9 +15210,11 @@ Total user-article interactions: 45993
 1113.0      1
 675.0       1
 662.0       1
-Name: article_id, Length: 714, dtype: int64</pre>
+Name: article_id, Length: 714, dtype: int64
+1429.0
+937
+</pre>
 </div>
-
 </div>
 
 </div>
@@ -15224,11 +15226,11 @@ Name: article_id, Length: 714, dtype: int64</pre>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[10]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[60]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">most_viewed_article_id</span> <span class="o">=</span> <span class="s2">"1429.0"</span> <span class="c1"># The most viewed article in the dataset as a string with one value following the decimal </span>
-<span class="n">max_views</span> <span class="o">=</span> <span class="mi">937</span><span class="c1"># The most viewed article in the dataset was viewed how many times?</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">most_viewed_article_id</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">article_id</span><span class="o">.</span><span class="n">value_counts</span><span class="p">(</span><span class="n">dropna</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span><span class="o">.</span><span class="n">index</span><span class="o">.</span><span class="n">values</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span> <span class="c1"># The most viewed article in the dataset as a string with one value following the decimal </span>
+<span class="n">max_views</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">article_id</span><span class="o">.</span><span class="n">value_counts</span><span class="p">(</span><span class="n">dropna</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span><span class="o">.</span><span class="n">values</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="c1"># The most viewed article in the dataset was viewed how many times?</span>
 </pre></div>
 
      </div>
@@ -17368,10 +17370,13 @@ jp-needs-light-background
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Your response here.</strong></p>
-<p>Overall, the accuracy we observe is so high as to cause a lot of suspicion about the model's validity. While the plot does go downwards as we introduce more latent variables, the absolute difference is so small that the difference is negligible. Additionally, the evaluation criteria (article views) is so sparse that simply assuming a user has read nothing results in a very high score.</p>
-<p>Introducing recall as a metric paints a much more accurate picture. We are rarely able to reassemble the test data by using the training data. The data we have access to is just too sparse to come up with useful "latent variables" for identifying articles.</p>
+<h3 id="Model-Performance">Model Performance<a class="anchor-link" href="#Model-Performance">&#182;</a></h3><p>Overall, the accuracy we observe is so high as to cause a lot of suspicion about the model's validity. The accuracy here is largely driven by 0 values in the user-item-matrix. In the scoring method provided (accuracy), we could simply assign 0s all the way through and score very well. As such, our measurement method here is flawed.</p>
+<p>Introducing recall as a metric paints a much clearer picture. We are rarely able to reassemble the test data by using the training data. The data we have access to is just too sparse to come up with useful "latent variables" for identifying articles. Because our recall is so low, our model overall is doing a pretty poor job.</p>
 <p>We currently have no indication if a user liked an article. If we have no intention of adding a "like" system, I would simply suggest we just use our "Most popular" approaches from above, or using what our neighbors have read.</p>
 <p>I did not explore the NLP possibility here, but I believe using NLP to categorize the articles would provide much more information for suggesting new articles. Without a "like" system, I do not think SVD is a viable approach.</p>
+<h3 id="How-is-our-model-doing?">How is our model doing?<a class="anchor-link" href="#How-is-our-model-doing?">&#182;</a></h3><p>I have suggested that I <em>think</em> our non-SVD models (collaborative and rank recommendations) are doing well. Specifically, I think that we should use our user-user-recs2 function, which takes similarr users AND article rankings into account. When we have a new user, we should just default to pure article rankings. However, what if just article ranking alone is best?</p>
+<p>We could try setting up an A/B test that could help us decide if article ranking or collaborative filtering is a more effective strategy. We would need to engineer a system to properly, randomly assign users to two groups, "ranking" and "collaborative." We could then track future engagement from these users (measured as article interaction counts per user) to decide which system we would want to use.</p>
+<p>There are a ton of considerations in this plan, however. Do we want to look at existing users, or new users? We inherently cannot use the collaborative filter on new users, so maybe we would only select users with a minimum number of interactions. However, this is another problem, since our median user only interacts with 3 articles, which is a pretty small number for us to enable effective collaborative filtering. However, getting more engagement out of our median user is probably a very effective way to drive overall engagement, so it is still worth developing a test around this plan.</p>
 
 </div>
 </div>
@@ -17401,7 +17406,7 @@ jp-needs-light-background
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[44]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[45]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">subprocess</span> <span class="kn">import</span> <span class="n">call</span>
@@ -17423,7 +17428,7 @@ jp-needs-light-background
 <div class="jp-OutputArea-child">
 
     
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[44]:</div>
+    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[45]:</div>
 
 
 
